resolve bug with marquee on mobile

--- a/themes/93degres/assets/css/pages/homepage.sass
+++ b/themes/93degres/assets/css/pages/homepage.sass
@@ -191,7 +191,7 @@
 		z-index: 1
 
 		+media-sm-and-less
-			display: none
+			opacity: 0
 		
 		h5 
 			font-size: 49vw
